build/usd-sys/usd-c/include.in/pxr/usd/usd/usd_attribute.h

typedef struct std__vector_pxr__SdfPath__t_s std__vector_pxr__SdfPath__t;
typedef std__vector_pxr__SdfPath__t std_SdfPathVector_t;
typedef struct std__vector_std__string__t_s std__vector_std__string__t;
typedef std__vector_std__string__t std_vector_string_t;
typedef struct pxrInternal_v0_21__pxrReserved____VtValue_t_s pxrInternal_v0_21__pxrReserved____VtValue_t;
typedef pxrInternal_v0_21__pxrReserved____VtValue_t pxr_VtValue_t;
typedef struct std__string_t_s std__string_t;
typedef std__string_t std_string_t;
typedef struct pxrInternal_v0_21__pxrReserved____SdfPath_t_s pxrInternal_v0_21__pxrReserved____SdfPath_t;
typedef pxrInternal_v0_21__pxrReserved____SdfPath_t pxr_SdfPath_t;
typedef struct pxrInternal_v0_21__pxrReserved____SdfValueTypeName_t_s pxrInternal_v0_21__pxrReserved____SdfValueTypeName_t;
typedef pxrInternal_v0_21__pxrReserved____SdfValueTypeName_t pxr_SdfValueTypeName_t;
typedef struct pxrInternal_v0_21__pxrReserved____UsdTimeCode_t_s pxrInternal_v0_21__pxrReserved____UsdTimeCode_t;
typedef pxrInternal_v0_21__pxrReserved____UsdTimeCode_t pxr_UsdTimeCode_t;
typedef struct pxrInternal_v0_21__pxrReserved____UsdProperty_t_s pxrInternal_v0_21__pxrReserved____UsdProperty_t;
typedef pxrInternal_v0_21__pxrReserved____UsdProperty_t pxr_UsdProperty_t;
typedef struct pxrInternal_v0_21__pxrReserved____UsdPrim_t_s pxrInternal_v0_21__pxrReserved____UsdPrim_t;
typedef pxrInternal_v0_21__pxrReserved____UsdPrim_t pxr_UsdPrim_t;
typedef struct pxrInternal_v0_21__pxrReserved____TfWeakPtr_pxr__UsdStage__t_s pxrInternal_v0_21__pxrReserved____TfWeakPtr_pxr__UsdStage__t;
typedef pxrInternal_v0_21__pxrReserved____TfWeakPtr_pxr__UsdStage__t pxr_UsdStagePtr_t;
typedef struct pxrInternal_v0_21__pxrReserved____TfToken_t_s pxrInternal_v0_21__pxrReserved____TfToken_t;
typedef pxrInternal_v0_21__pxrReserved____TfToken_t pxr_TfToken_t;
typedef pxrInternal_v0_21__pxrReserved____UsdAttribute_t pxr_UsdAttribute_t;
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_IsValid(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetStage(
    pxr_UsdAttribute_t const * this_
    , pxr_UsdStagePtr_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetPath(
    pxr_UsdAttribute_t const * this_
    , pxr_SdfPath_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetPrimPath(
    pxr_UsdAttribute_t const * this_
    , pxr_SdfPath_t const * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetPrim(
    pxr_UsdAttribute_t const * this_
    , pxr_UsdPrim_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetName(
    pxr_UsdAttribute_t const * this_
    , pxr_TfToken_t const * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetDescription(
    pxr_UsdAttribute_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetMetadata_value(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , pxr_TfToken_t const * key
    , pxr_VtValue_t * value);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_SetMetadata_value(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , pxr_TfToken_t const * key
    , pxr_VtValue_t const * value);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_ClearMetadata(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , pxr_TfToken_t const * key);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_HasMetadata(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , pxr_TfToken_t const * key);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_HasAuthoredMetadata(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , pxr_TfToken_t const * key);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetMetadataByDictKey_value(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , pxr_TfToken_t const * key
    , pxr_TfToken_t const * keyPath
    , pxr_VtValue_t * value);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_SetMetadataByDictKey(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , pxr_TfToken_t const * key
    , pxr_TfToken_t const * keyPath
    , pxr_VtValue_t const * value);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_ClearMetadataByDictKey(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , pxr_TfToken_t const * key
    , pxr_TfToken_t const * keyPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_HasMetadataDictKey(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , pxr_TfToken_t const * key
    , pxr_TfToken_t const * keyPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_HasAuthoredMetadataDictKey(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , pxr_TfToken_t const * key
    , pxr_TfToken_t const * keyPath);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_IsHidden(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_SetHidden(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , _Bool hidden);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_ClearHidden(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_HasAuthoredHidden(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetDocumentation(
    pxr_UsdAttribute_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_SetDocumentation(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , std_string_t const * doc);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_ClearDocumentation(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_HasAuthoredDocumentation(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetNamespaceDelimiter(
    char * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetBaseName(
    pxr_UsdAttribute_t const * this_
    , pxr_TfToken_t * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetNamespace(
    pxr_UsdAttribute_t const * this_
    , pxr_TfToken_t * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_SplitName(
    pxr_UsdAttribute_t const * this_
    , std_vector_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetDisplayGroup(
    pxr_UsdAttribute_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_SetDisplayGroup(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , std_string_t const * displayGroup);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_ClearDisplayGroup(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_HasAuthoredDisplayGroup(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetNestedDisplayGroups(
    pxr_UsdAttribute_t const * this_
    , std_vector_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_SetNestedDisplayGroups(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , std_vector_string_t const * nestedGroups);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetDisplayName(
    pxr_UsdAttribute_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_SetDisplayName(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , std_string_t const * name);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_ClearDisplayName(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_HasAuthoredDisplayName(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_IsCustom(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_SetCustom(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , _Bool isCustom);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_IsDefined(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_IsAuthored(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_FlattenTo_parent(
    pxr_UsdAttribute_t const * this_
    , pxr_UsdProperty_t * * return_
    , pxr_UsdPrim_t const * parent);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_FlattenTo_parent_property(
    pxr_UsdAttribute_t const * this_
    , pxr_UsdProperty_t * * return_
    , pxr_UsdPrim_t const * parent
    , pxr_TfToken_t const * propName);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_FlattenTo_property(
    pxr_UsdAttribute_t const * this_
    , pxr_UsdProperty_t * * return_
    , pxr_UsdProperty_t const * property);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_ctor(
    pxr_UsdAttribute_t * * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetTypeName(
    pxr_UsdAttribute_t const * this_
    , pxr_SdfValueTypeName_t * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_SetTypeName(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , pxr_SdfValueTypeName_t const * typeName);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetRoleName(
    pxr_UsdAttribute_t const * this_
    , pxr_TfToken_t * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_HasValue(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_HasAuthoredValue(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_HasFallbackValue(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_ValueMightBeTimeVarying(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_Get_value(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , pxr_VtValue_t * value
    , pxr_UsdTimeCode_t time);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_AddConnection(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , pxr_SdfPath_t const * source
    , pxr_UsdListPosition position);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_RemoveConnection(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , pxr_SdfPath_t const * source);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_SetConnections(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , std_SdfPathVector_t const * sources);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_ClearConnections(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetConnections(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_
    , std_SdfPathVector_t * sources);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_HasAuthoredConnections(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_GetColorSpace(
    pxr_UsdAttribute_t const * this_
    , pxr_TfToken_t * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_SetColorSpace(
    pxr_UsdAttribute_t const * this_
    , pxr_TfToken_t const * colorSpace);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_HasColorSpace(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_ClearColorSpace(
    pxr_UsdAttribute_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____UsdAttribute_copy(
    pxr_UsdAttribute_t * * this_
    , pxr_UsdAttribute_t const * rhs);